--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="/cards/BACK.png">
     <meta property="og:url" content="https://blackjackmist.netlify.app/">
-    <link rel="stylesheet" href="blackjack.css">
+    <link rel="stylesheet" href="blackjack.css?v=5">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="/cards/BACK.png">
     <meta name="theme-color" content="#232526">
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <script type="module" src="blackjack.js"></script>
+    <script type="module" src="blackjack.js?v=5"></script>
     <script>
         // Register service worker for PWA
         if ('serviceWorker' in navigator) {
